--- a/status-display/src/main/resources/homer/tastyworld/frontend/statusdisplay/tastyworld-status-display.fxml
+++ b/status-display/src/main/resources/homer/tastyworld/frontend/statusdisplay/tastyworld-status-display.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homer.tastyworld.frontend.statusdisplay.StatusDisplayController">
+<AnchorPane disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFA500;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homer.tastyworld.frontend.statusdisplay.StatusDisplayController">
    <children>
-      <GridPane alignment="CENTER" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" percentWidth="55.0" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -23,12 +23,12 @@
             <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
          </padding>
          <children>
-            <AnchorPane style="-fx-background-color: #fff000; -fx-background-radius: 25;" GridPane.rowIndex="2">
+            <AnchorPane style="-fx-background-color: #FFDD45; -fx-background-radius: 25;" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
                <children>
-                  <GridPane fx:id="cookingOrders" gridLinesVisible="true" layoutX="33.0" layoutY="75.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="cookingOrders" layoutX="33.0" layoutY="75.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="ALWAYS" />
                     </columnConstraints>
@@ -41,12 +41,12 @@
                   </GridPane>
                </children>
             </AnchorPane>
-            <AnchorPane style="-fx-background-color: #fff000; -fx-background-radius: 25;" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <AnchorPane style="-fx-background-color: #FFDD45; -fx-background-radius: 25;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
                <children>
-                  <GridPane fx:id="readyOrders" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="readyOrders" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="ALWAYS" />
                     </columnConstraints>
@@ -59,12 +59,12 @@
                   </GridPane>
                </children>
             </AnchorPane>
-            <AnchorPane style="-fx-background-color: #fff000; -fx-background-radius: 25;">
+            <AnchorPane style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;">
                <GridPane.margin>
                   <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
                </GridPane.margin>
                <children>
-                  <GridPane alignment="CENTER" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
                         <ColumnConstraints hgrow="SOMETIMES" />
@@ -82,12 +82,12 @@
                   </GridPane>
                </children>
             </AnchorPane>
-            <AnchorPane style="-fx-background-color: #fff000; -fx-background-radius: 25;" GridPane.columnIndex="2">
+            <AnchorPane style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
                </GridPane.margin>
                <children>
-                  <GridPane alignment="CENTER" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
                         <ColumnConstraints hgrow="SOMETIMES" />
