--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -10,7 +10,7 @@
    <children>
       <AnchorPane fx:id="mainPaneParent" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane fx:id="mainPanePositions" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="mainPaneGridNodeContainer" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
               </columnConstraints>
@@ -43,13 +43,21 @@
                   </AnchorPane>
                   <GridPane gridLinesVisible="true" GridPane.rowIndex="1">
                     <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="76.0" />
                       <ColumnConstraints hgrow="SOMETIMES" />
-                      <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                      <RowConstraints percentHeight="65.0" vgrow="SOMETIMES" />
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
+                     <children>
+                        <AnchorPane fx:id="mainPaneSettingsImgBtn" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="mainPaneNewOrderImgBtn" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                     </children>
                   </GridPane>
                   <GridPane alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="2">
                      <columnConstraints>
@@ -79,28 +87,10 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                                  <children>
-                                    <AnchorPane style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;">
+                                    <AnchorPane fx:id="mainPaneCookingOrdersTopic" style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;">
                                        <GridPane.margin>
                                           <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
                                        </GridPane.margin>
-                                       <children>
-                                          <GridPane alignment="CENTER" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                             <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" />
-                                                <ColumnConstraints hgrow="SOMETIMES" percentWidth="15.0" />
-                                             </columnConstraints>
-                                             <rowConstraints>
-                                                <RowConstraints vgrow="SOMETIMES" />
-                                             </rowConstraints>
-                                             <padding>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </padding>
-                                             <children>
-                                                <AnchorPane fx:id="mainPaneCookingOrdersTopic" GridPane.columnIndex="1" />
-                                             </children>
-                                          </GridPane>
-                                       </children>
                                     </AnchorPane>
                                     <GridPane fx:id="mainPaneCookingOrdersTable" gridLinesVisible="true" GridPane.rowIndex="2">
                                        <columnConstraints>
@@ -132,28 +122,10 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                                  <children>
-                                    <AnchorPane style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;">
+                                    <AnchorPane fx:id="mainPaneReadyOrdersTopic" style="-fx-background-color: #FFFFF0; -fx-background-radius: 25;">
                                        <GridPane.margin>
                                           <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
                                        </GridPane.margin>
-                                       <children>
-                                          <GridPane alignment="CENTER" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                             <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" percentWidth="5.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" />
-                                                <ColumnConstraints hgrow="SOMETIMES" percentWidth="15.0" />
-                                             </columnConstraints>
-                                             <rowConstraints>
-                                                <RowConstraints vgrow="SOMETIMES" />
-                                             </rowConstraints>
-                                             <padding>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                             </padding>
-                                             <children>
-                                                <AnchorPane fx:id="mainPaneReadyOrdersTopic" GridPane.columnIndex="1" />
-                                             </children>
-                                          </GridPane>
-                                       </children>
                                     </AnchorPane>
                                     <GridPane fx:id="mainPaneReadyOrdersTable" gridLinesVisible="true" GridPane.rowIndex="2">
                                        <columnConstraints>
