--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -55,8 +55,8 @@
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <AnchorPane fx:id="mainPaneSettingsImgBtn" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <AnchorPane fx:id="mainPaneNewOrderImgBtn" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="mainPaneSettingsImgBtn" onMouseClicked="#mainPaneSettingsImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="mainPaneNewOrderImgBtn" onMouseClicked="#mainPaneNewOrderImgBtnPressed" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <GridPane alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="2">
@@ -140,6 +140,50 @@
                            </children>
                         </AnchorPane>
                      </children>
+                  </GridPane>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="menuPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="82.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <GridPane gridLinesVisible="true">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="76.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints percentHeight="75.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <AnchorPane fx:id="menuPaneDeleteOrderImgBtn" onMouseClicked="#menuPaneDeleteOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="menuPaneTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="menuPaneLookOrderImgBtn" onMouseClicked="#menuPaneLookOrderImgBtnPressed" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+                  <GridPane fx:id="menuPaneImgMenuContainer" alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="1">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="92.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints vgrow="SOMETIMES" />
+                     </rowConstraints>
                   </GridPane>
                </children>
             </GridPane>
