--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -256,6 +256,18 @@
                               </GridPane>
                            </children>
                         </GridPane>
+                        <GridPane fx:id="addProductAdditivesContainer" gridLinesVisible="true" GridPane.columnIndex="3">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                            <RowConstraints vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <AnchorPane fx:id="addProductAdditivesTopic" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </GridPane>
                      </children>
                   </GridPane>
                </children>
