--- a/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/styles/styles.css
+++ b/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/styles/styles.css
@@ -1,21 +1,21 @@
-.img-btn {
+.anchor-pane-as-button {
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 12, 0, 0, 4);
     -fx-cursor: hand;
 }
 
-.img-btn:pressed {
+.anchor-pane-as-button:pressed {
     -fx-effect: dropshadow(gaussian, rgba(255,213,79,0.4), 15, 0, 0, 6);
     -fx-scale-x: 0.97;
     -fx-scale-y: 0.97;
 }
 
-.img-btn:disabled {
+.anchor-pane-as-button:disabled {
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 1);
     -fx-cursor: default;
     -fx-opacity: 0.4;
 }
 
-.img-btn:disabled:pressed {
+.anchor-pane-as-button:disabled:pressed {
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 1);
     -fx-scale-x: 1.0;
     -fx-scale-y: 1.0;
